--- a/04_ES6.md
+++ b/04_ES6.md
@@ -4,6 +4,38 @@
 // 去除数组的重复成员
 [...new Set(array)]
 ```
+### 转化为真实数组
+```js
+function f5(){
+    // 可以使用slice来将arguments转换为真实数组
+    var args1 = Array.prototype.slice.call(arguments);
+    var args2 = [].slice.call(arguments);
+    // 也可以使用Array.from()方法或者扩展运算符来将arguments转换为真实数组
+    var args3 = Array.from(arguments);
+    var args4 = [...arguments];
+}
+f5('name', 'age');
+
+```
+### 声明变量的方法
+ES5 只有两种声明变量的方法：var命令和function命令。
+ES6 除了添加let和const命令，另外两种声明变量的方法：import命令和class命令。所以，ES6 一共有 6 种声明变量的方法。
+### var、let、const的区别
+https://fangyinghang.com/let-in-js/  
+#### var
+#### let
+- 不能重复声明已存在的变量；
+- 不存在变量提升
+- 暂时性死区   
+所声明的变量，只在let命令所在的代码块内有效。  
+只要块级作用域内存在let命令，它所声明的变量就“绑定”（binding）这个区域，不再受外部的影响。   
+#### const
+- const声明一个只读的常量。一旦声明，常量的值就不能改变。
+- const的作用域与let命令相同：只在声明所在的块级作用域内有效。
+- const命令声明的常量也是不提升，同样存在暂时性死区，只能在声明的位置后面使用。
+- const声明的常量，也与let一样不可重复声明。   
+const实际上保证的，并不是变量的值不得改动，而是变量指向的那个内存地址所保存的数据不得改动。对于简单类型的数据（数值、字符串、布尔值），值就保存在变量指向的那个内存地址，因此等同于常量。但对于复合类型的数据（主要是对象和数组），变量指向的内存地址，保存的只是一个指向实际数据的指针，const只能保证这个指针是固定的（即总是指向另一个固定的地址），至于它指向的数据结构是不是可变的，就完全不能控制了。因此，将一个对象声明为常量必须非常小心。
+
 ### function与class的区别
 #### class
 - ES6 的class可以看作只是一个语法糖，它的绝大部分功能，ES5 都可以做到，新的class写法只是让对象原型的写法更加清晰、更像面向对象编程的语法而已。  
